# raft_election

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.json  delete.sh  install.sh
proto/: CMakeLists.txt  test.proto
src/: CMakeLists.txt  callback.h  cli.cc  client.cc  common.h  config.cc  config.h  config.hh  durable.cc  durable.h  raft.cc  raft.h  raft.hh  rpc.cc  rpc.h  server.cc  service.cc  sqlcmd.h  state.cc  state.h  storage.cc  storage.h  timedcycle.cc  timedcycle.h  utils.cc  utils.h
src/cmake/: proto.cmake
src/proto/: log.proto  raft.proto  rpc.cmake  test2.proto
src/tasks/: electiontask.cc  electiontask.h  synctask.cc  synctask.h  timedcycle.h
